2017-02-01  Karl Berry  <karl@tug.org>

	* ac/libgs.ac: remove (unused).
	* ac/dvisvgm.ac: remove (libgs options).
	* configure.ac: do not include ac/dvisvgm.ac.

2017-01-29  Karl Berry  <karl@freefriends.org>

	Import 2.1; adapt build to use more of original; regenerate files.
	* configure.ac: generally use more of original configure.ac.
	(AC_CONFIG_MACRO_DIRS): look in new m4/ subdir.
	(libgs) [enable_native_texlive_build]: force dlload or failure.
	* m4: new subdir, for ax_cxx_compile_stdcxx.m4.
	* Makefile.am (SUBDIRS): define, and build in subdirs instead
	of building here at the top (TL) level.
	(tests/dvisvgm.log): dvisvgm binary now in dvisvgm-src/src/ subdir.
	* tests/dvisvgm.test: new binary location.
	* version.ac: 2.1.

2016-07-04  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* Imported release 1.16
	* version.ac, Makefile.am: Adapted.

2016-04-20  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* Imported release 1.15.1
	* version.ac: Adapted.

2016-02-27  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* Imported release 1.15
	* version.ac: Adapted.

2016-01-20  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* Imported release 1.14.2
	* version.ac: Adapted.

2016-01-06  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* Imported release 1.14.1
	* version.ac: Adapted.

2015-12-28  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* Imported release 1.14.
	* version.ac: Adapted.

2015-12-09  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* Imported release 1.13.
	* version.ac: Adapted.

2015-12-03  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* Imported release 1.12.
	* version.ac: Adapted.

2015-09-28  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Imported release 1.11.
	* version.ac: Adapted.

2015-07-28  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Imported release 1.10.
	* version.ac: Adapted.
	* Makefile.am: Adjusted.

2015-07-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Better dependencies for 'make check'.

2015-04-02  Peter Breitenlohner  <peb@mppmu.mpg.de>
