@@ -1,3 +1,9 @@
+2017-02-04  Karl Berry  <karl@tug.org>
+
+	* configure.ac,
+	* dvisvgm-src/libs/ff-woff/fontforge/splinefont.h: testing xlocale
+	fixes from Martin.
+
 2017-02-01  Karl Berry  <karl@tug.org>
 
 	* ac/libgs.ac: remove (unused).
